# tf_cnn_benchmark

./: .stestr.conf  Jenkinsfile  LICENSE  README.md  setup.cfg  tox.ini
docker/: Dockerfile.dev
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-tf_cnn_benchmarks_start.py2.ipynb
tf_cnn_benchmarks/dataset/: make_dataset.py
tf_cnn_benchmarks/features/: build_features.py
tf_cnn_benchmarks/models/: deepaas_api.py
tf_cnn_benchmarks/tests/: test_unit_model.py
tf_cnn_benchmarks/visualization/: visualize.py
