[metadata]
name = tf_cnn_benchmarks
summary = Collection of scripts in order to perform hardware benchmarks using Convolutional Neural Networks and TensorFlow
description-file =
    README.md
author = Adrian Grupp, Valentin Kozlov
author-email = usmfz@student.kit.edu
version = 0.1.0
license = MIT
home-page = http://github.com/adriangrupp/tf_cnn_benchmarks
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5


[files]
packages =
    tf_cnn_benchmarks

[entry_points]

deepaas.model = 
    tf_cnn_benchmarks = tf_cnn_benchmarks.models.deepaas_api

